force-app/main/default/objects/City__c/fields/City_Masking_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Masking_Name__c</fullName>
    <label>City Masking Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>