force-app/main/default/objects/City__c/fields/City_Pincode__c.field-meta.xml
<CustomField>
    <fullName>City_Pincode__c</fullName>
    <label>City Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>