force-app/main/default/objects/City__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Cities</relationshipLabel>
    <relationshipName>Cities</relationshipName>
    <type>Lookup</type>
</CustomField>